// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`preload tags > Preload Default 1`] = `
[
  {
    "assetType": "style",
    "earlyHintLink": "</assets/static/onRenderClient.$HASH.css>; rel=preload; as=style",
    "isEntry": true,
    "mediaType": "text/css",
    "src": "/assets/static/onRenderClient.$HASH.css",
  },
  {
    "assetType": "font",
    "earlyHintLink": "</assets/static/Sono-Light.$HASH.ttf>; rel=preload; as=font",
    "isEntry": false,
    "mediaType": "font/ttf",
    "src": "/assets/static/Sono-Light.$HASH.ttf",
  },
  {
    "assetType": "image",
    "earlyHintLink": "</assets/static/logo.$HASH.svg>; rel=preload; as=image",
    "isEntry": false,
    "mediaType": "image/svg+xml",
    "src": "/assets/static/logo.$HASH.svg",
  },
  {
    "assetType": "script",
    "earlyHintLink": "</assets/entries/entry-server-routing.$HASH.js>; rel=modulepreload; as=script",
    "isEntry": true,
    "mediaType": "text/javascript",
    "src": "/assets/entries/entry-server-routing.$HASH.js",
  },
  {
    "assetType": "script",
    "earlyHintLink": "</assets/entries/pages_index.$HASH.js>; rel=modulepreload; as=script",
    "isEntry": false,
    "mediaType": "text/javascript",
    "src": "/assets/entries/pages_index.$HASH.js",
  },
  {
    "assetType": "script",
    "earlyHintLink": "</assets/chunks/chunk-$HASH.js>; rel=modulepreload; as=script",
    "isEntry": false,
    "mediaType": "text/javascript",
    "src": "/assets/chunks/chunk-$HASH.js",
  },
]
`;

exports[`preload tags > Preload Default 2`] = `
"<!DOCTYPE html>
    <html>
      <head>
        <link rel=\\"stylesheet\\" type=\\"text/css\\" href=\\"/assets/static/onRenderClient.$HASH.css\\">
        <link rel=\\"preload\\" href=\\"/assets/static/Sono-Light.$HASH.ttf\\" as=\\"font\\" type=\\"font/ttf\\" crossorigin>
      </head>
      <body>
        <div id=\\"page-view\\"><div style=\\"display:flex;max-width:900px;margin:auto\\"><div style=\\"padding:20px;padding-top:20px;flex-shrink:0;display:flex;flex-direction:column;align-items:center;line-height:1.8em\\"><div style=\\"margin-top:20px;margin-bottom:10px\\"><a href=\\"/\\"><img src=\\"/assets/static/logo.$HASH.svg\\" height=\\"64\\" width=\\"64\\"/></a></div><a class=\\"navitem\\" href=\\"/\\">Preload Default</a><a class=\\"navitem\\" href=\\"/preload-disabled\\">Preload Disabled</a><a class=\\"navitem\\" href=\\"/preload-images\\">Preload Images</a></div><div style=\\"padding:20px;padding-bottom:50px;border-left:2px solid #eee;min-height:100vh\\"><h1>Default</h1><p>This page showcases the default preloading strategy: in production, both the image and the font are preloaded.</p></div></div></div>
        <script type=\\"module\\" src=\\"/assets/entries/entry-server-routing.$HASH.js\\" defer></script>
        <link rel=\\"modulepreload\\" href=\\"/assets/entries/pages_index.$HASH.js\\" as=\\"script\\" type=\\"text/javascript\\">
        <link rel=\\"modulepreload\\" href=\\"/assets/chunks/chunk-$HASH.js\\" as=\\"script\\" type=\\"text/javascript\\">
        <script id=\\"vite-plugin-ssr_pageContext\\" type=\\"application/json\\">{\\"pageContext\\":{\\"_pageId\\":\\"/pages/index\\",\\"pageProps\\":\\"!undefined\\",\\"errorReason\\":\\"!undefined\\",\\"urlRewrite\\":null}}</script>
      </body>
    </html>"
`;

exports[`preload tags > Preload Disabled 1`] = `
[
  {
    "assetType": "style",
    "earlyHintLink": "</assets/static/onRenderClient.$HASH.css>; rel=preload; as=style",
    "isEntry": true,
    "mediaType": "text/css",
    "src": "/assets/static/onRenderClient.$HASH.css",
  },
  {
    "assetType": "font",
    "earlyHintLink": "</assets/static/Sono-Light.$HASH.ttf>; rel=preload; as=font",
    "isEntry": false,
    "mediaType": "font/ttf",
    "src": "/assets/static/Sono-Light.$HASH.ttf",
  },
  {
    "assetType": "image",
    "earlyHintLink": "</assets/static/logo.$HASH.svg>; rel=preload; as=image",
    "isEntry": false,
    "mediaType": "image/svg+xml",
    "src": "/assets/static/logo.$HASH.svg",
  },
  {
    "assetType": "script",
    "earlyHintLink": "</assets/entries/entry-server-routing.$HASH.js>; rel=modulepreload; as=script",
    "isEntry": true,
    "mediaType": "text/javascript",
    "src": "/assets/entries/entry-server-routing.$HASH.js",
  },
  {
    "assetType": "script",
    "earlyHintLink": "</assets/entries/pages_preload-disabled.$HASH.js>; rel=modulepreload; as=script",
    "isEntry": false,
    "mediaType": "text/javascript",
    "src": "/assets/entries/pages_preload-disabled.$HASH.js",
  },
  {
    "assetType": "script",
    "earlyHintLink": "</assets/chunks/chunk-$HASH.js>; rel=modulepreload; as=script",
    "isEntry": false,
    "mediaType": "text/javascript",
    "src": "/assets/chunks/chunk-$HASH.js",
  },
]
`;

exports[`preload tags > Preload Disabled 2`] = `
"<!DOCTYPE html>
    <html>
      <head>
        <link rel=\\"stylesheet\\" type=\\"text/css\\" href=\\"/assets/static/onRenderClient.$HASH.css\\">
      </head>
      <body>
        <div id=\\"page-view\\"><div style=\\"display:flex;max-width:900px;margin:auto\\"><div style=\\"padding:20px;padding-top:20px;flex-shrink:0;display:flex;flex-direction:column;align-items:center;line-height:1.8em\\"><div style=\\"margin-top:20px;margin-bottom:10px\\"><a href=\\"/\\"><img src=\\"/assets/static/logo.$HASH.svg\\" height=\\"64\\" width=\\"64\\"/></a></div><a class=\\"navitem\\" href=\\"/\\">Preload Default</a><a class=\\"navitem\\" href=\\"/preload-disabled\\">Preload Disabled</a><a class=\\"navitem\\" href=\\"/preload-images\\">Preload Images</a></div><div style=\\"padding:20px;padding-bottom:50px;border-left:2px solid #eee;min-height:100vh\\"><h1>Preload Disabled</h1><p>This page showcases completely disabled preloading: the image nor the font are preloaded.</p></div></div></div>
        <script type=\\"module\\" src=\\"/assets/entries/entry-server-routing.$HASH.js\\" defer></script>
        <script id=\\"vite-plugin-ssr_pageContext\\" type=\\"application/json\\">{\\"pageContext\\":{\\"_pageId\\":\\"/pages/preload-disabled\\",\\"pageProps\\":\\"!undefined\\",\\"errorReason\\":\\"!undefined\\",\\"urlRewrite\\":null}}</script>
      </body>
    </html>"
`;

exports[`preload tags > Preload Eager 1`] = `
[
  {
    "assetType": "style",
    "earlyHintLink": "</assets/static/onRenderClient.$HASH.css>; rel=preload; as=style",
    "isEntry": true,
    "mediaType": "text/css",
    "src": "/assets/static/onRenderClient.$HASH.css",
  },
  {
    "assetType": "font",
    "earlyHintLink": "</assets/static/Sono-Light.$HASH.ttf>; rel=preload; as=font",
    "isEntry": false,
    "mediaType": "font/ttf",
    "src": "/assets/static/Sono-Light.$HASH.ttf",
  },
  {
    "assetType": "image",
    "earlyHintLink": "</assets/static/logo.$HASH.svg>; rel=preload; as=image",
    "isEntry": false,
    "mediaType": "image/svg+xml",
    "src": "/assets/static/logo.$HASH.svg",
  },
  {
    "assetType": "script",
    "earlyHintLink": "</assets/entries/entry-server-routing.$HASH.js>; rel=modulepreload; as=script",
    "isEntry": true,
    "mediaType": "text/javascript",
    "src": "/assets/entries/entry-server-routing.$HASH.js",
  },
  {
    "assetType": "script",
    "earlyHintLink": "</assets/entries/pages_preload-eager.$HASH.js>; rel=modulepreload; as=script",
    "isEntry": false,
    "mediaType": "text/javascript",
    "src": "/assets/entries/pages_preload-eager.$HASH.js",
  },
  {
    "assetType": "script",
    "earlyHintLink": "</assets/chunks/chunk-$HASH.js>; rel=modulepreload; as=script",
    "isEntry": false,
    "mediaType": "text/javascript",
    "src": "/assets/chunks/chunk-$HASH.js",
  },
]
`;

exports[`preload tags > Preload Eager 2`] = `
"<!DOCTYPE html>
    <html>
      <head>
        <link rel=\\"stylesheet\\" type=\\"text/css\\" href=\\"/assets/static/onRenderClient.$HASH.css\\">
        <link rel=\\"preload\\" href=\\"/assets/static/Sono-Light.$HASH.ttf\\" as=\\"font\\" type=\\"font/ttf\\" crossorigin>
        <link rel=\\"preload\\" href=\\"/assets/static/logo.$HASH.svg\\" as=\\"image\\" type=\\"image/svg+xml\\">
        <link rel=\\"modulepreload\\" href=\\"/assets/entries/pages_preload-eager.$HASH.js\\" as=\\"script\\" type=\\"text/javascript\\">
        <link rel=\\"modulepreload\\" href=\\"/assets/chunks/chunk-$HASH.js\\" as=\\"script\\" type=\\"text/javascript\\">
      </head>
      <body>
        <div id=\\"page-view\\"><div style=\\"display:flex;max-width:900px;margin:auto\\"><div style=\\"padding:20px;padding-top:20px;flex-shrink:0;display:flex;flex-direction:column;align-items:center;line-height:1.8em\\"><div style=\\"margin-top:20px;margin-bottom:10px\\"><a href=\\"/\\"><img src=\\"/assets/static/logo.$HASH.svg\\" height=\\"64\\" width=\\"64\\"/></a></div><a class=\\"navitem\\" href=\\"/\\">Preload Default</a><a class=\\"navitem\\" href=\\"/preload-disabled\\">Preload Disabled</a><a class=\\"navitem\\" href=\\"/preload-images\\">Preload Images</a></div><div style=\\"padding:20px;padding-bottom:50px;border-left:2px solid #eee;min-height:100vh\\"><h1>Eager</h1><p>This page showcases eager preloading (non-JavaScript assets are preloaded ASAP).</p></div></div></div>
        <script type=\\"module\\" src=\\"/assets/entries/entry-server-routing.$HASH.js\\" defer></script>
        <script id=\\"vite-plugin-ssr_pageContext\\" type=\\"application/json\\">{\\"pageContext\\":{\\"_pageId\\":\\"/pages/preload-eager\\",\\"pageProps\\":\\"!undefined\\",\\"errorReason\\":\\"!undefined\\",\\"urlRewrite\\":null}}</script>
      </body>
    </html>"
`;

exports[`preload tags > Preload Images 1`] = `
[
  {
    "assetType": "style",
    "earlyHintLink": "</assets/static/onRenderClient.$HASH.css>; rel=preload; as=style",
    "isEntry": true,
    "mediaType": "text/css",
    "src": "/assets/static/onRenderClient.$HASH.css",
  },
  {
    "assetType": "font",
    "earlyHintLink": "</assets/static/Sono-Light.$HASH.ttf>; rel=preload; as=font",
    "isEntry": false,
    "mediaType": "font/ttf",
    "src": "/assets/static/Sono-Light.$HASH.ttf",
  },
  {
    "assetType": "image",
    "earlyHintLink": "</assets/static/logo.$HASH.svg>; rel=preload; as=image",
    "isEntry": false,
    "mediaType": "image/svg+xml",
    "src": "/assets/static/logo.$HASH.svg",
  },
  {
    "assetType": "script",
    "earlyHintLink": "</assets/entries/entry-server-routing.$HASH.js>; rel=modulepreload; as=script",
    "isEntry": true,
    "mediaType": "text/javascript",
    "src": "/assets/entries/entry-server-routing.$HASH.js",
  },
  {
    "assetType": "script",
    "earlyHintLink": "</assets/entries/pages_preload-images.$HASH.js>; rel=modulepreload; as=script",
    "isEntry": false,
    "mediaType": "text/javascript",
    "src": "/assets/entries/pages_preload-images.$HASH.js",
  },
  {
    "assetType": "script",
    "earlyHintLink": "</assets/chunks/chunk-$HASH.js>; rel=modulepreload; as=script",
    "isEntry": false,
    "mediaType": "text/javascript",
    "src": "/assets/chunks/chunk-$HASH.js",
  },
]
`;

exports[`preload tags > Preload Images 2`] = `
"<!DOCTYPE html>
    <html>
      <head>
        <link rel=\\"stylesheet\\" type=\\"text/css\\" href=\\"/assets/static/onRenderClient.$HASH.css\\">
        <link rel=\\"preload\\" href=\\"/assets/static/Sono-Light.$HASH.ttf\\" as=\\"font\\" type=\\"font/ttf\\" crossorigin>
        <link rel=\\"preload\\" href=\\"/assets/static/logo.$HASH.svg\\" as=\\"image\\" type=\\"image/svg+xml\\">
      </head>
      <body>
        <div id=\\"page-view\\"><div style=\\"display:flex;max-width:900px;margin:auto\\"><div style=\\"padding:20px;padding-top:20px;flex-shrink:0;display:flex;flex-direction:column;align-items:center;line-height:1.8em\\"><div style=\\"margin-top:20px;margin-bottom:10px\\"><a href=\\"/\\"><img src=\\"/assets/static/logo.$HASH.svg\\" height=\\"64\\" width=\\"64\\"/></a></div><a class=\\"navitem\\" href=\\"/\\">Preload Default</a><a class=\\"navitem\\" href=\\"/preload-disabled\\">Preload Disabled</a><a class=\\"navitem\\" href=\\"/preload-images\\">Preload Images</a></div><div style=\\"padding:20px;padding-bottom:50px;border-left:2px solid #eee;min-height:100vh\\"><h1>Preload Images</h1><p>This page showcases a custom strategy of preloading images.</p></div></div></div>
        <script type=\\"module\\" src=\\"/assets/entries/entry-server-routing.$HASH.js\\" defer></script>
        <link rel=\\"modulepreload\\" href=\\"/assets/entries/pages_preload-images.$HASH.js\\" as=\\"script\\" type=\\"text/javascript\\">
        <link rel=\\"modulepreload\\" href=\\"/assets/chunks/chunk-$HASH.js\\" as=\\"script\\" type=\\"text/javascript\\">
        <script id=\\"vite-plugin-ssr_pageContext\\" type=\\"application/json\\">{\\"pageContext\\":{\\"_pageId\\":\\"/pages/preload-images\\",\\"pageProps\\":\\"!undefined\\",\\"errorReason\\":\\"!undefined\\",\\"urlRewrite\\":null}}</script>
      </body>
    </html>"
`;
